syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
option go_package = "rpc/pb";

package freedxm;

service Service {
  rpc CreateSession(NewSessionRequest) returns (google.protobuf.Empty);
  rpc FetchSessions(google.protobuf.Empty) returns (SessionList);
  rpc FetchConfigFileContent(google.protobuf.Empty)
      returns (google.protobuf.StringValue);
}

message NewSessionRequest {
  repeated string blockLists = 1;
  int32 timeSeconds = 2;
}

message BlockList {
  string name = 1;
  repeated string domains = 2;
  repeated string processes = 3;
}

message Session {
  int32 timeSeconds = 1;
  repeated BlockList blockLists = 2;
}

message SessionList { repeated Session sessions = 1; }
